# rust-gc

./: Cargo.toml
gc/: Cargo.toml
gc/benches/: alloc_in_a_loop.rs
gc/examples/: comprehensive.rs
gc/src/: gc.rs  lib.rs  serde.rs  trace.rs  weak.rs
gc/tests/: finalization_registry.rs  finalize.rs  gc_semantics.rs  gymnastics_cycle.rs  ignore_trace.rs  trace_impl.rs  weak_gc.rs
gc_derive/: Cargo.toml
gc_derive/src/: lib.rs
