[package]
name = "gc"
version = "0.5.1"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Nika Layzell <nika@thelayzells.com>"]
description = "Tracing garbage collector plugin for Rust."
repository = "https://github.com/Manishearth/rust-gc"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "plugin", "memory"]
edition = "2024"

[features]
nightly = []
derive = ["gc_derive"]
unstable-config = []
unstable-stats = []

[dependencies]
gc_derive = { path = "../gc_derive", version = "0.5.0", optional = true }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
gc = { path = ".", features = ["derive"] }
serde_json = { version = "1.0.147" }
criterion = "0.8.1"

[[bench]]
name = "alloc_in_a_loop"
harness = false
path = "benches/alloc_in_a_loop.rs"
