[package]
name = "gc_derive"
version = "0.5.0"
authors = [
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Nika Layzell <nika@thelayzells.com>",
]

description = "Garbage collector derive plugin for rust-gc"
repository = "https://github.com/Manishearth/rust-gc"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "macro", "memory"]
edition = "2024"

[lib]
name = "gc_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
synstructure = "0.13.2"
